<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/bottomSheet"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/ib_line"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_line_bottom_sheet_book"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:id="@+id/ll_box_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_book_details"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/bg_white_overlay_4dp"
                    android:minWidth="120dp"
                    android:minHeight="178dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@drawable/dummy_book" />

                <LinearLayout
                    android:id="@+id/box_author_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="1dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_book_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_title_book"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_book_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/tv_author_book"
                        android:textColor="@color/gray_600"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_title_synopsis_book"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ll_box_header" />

            <TextView
                android:id="@+id/tv_synopsis_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_synopsis_book"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_synopsis" />
            <TextView
                android:id="@+id/tv_title_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_title_date"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_synopsis_book" />
            <TextView
                android:id="@+id/tv_date_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_date"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_date" />
            <TextView
                android:id="@+id/tv_title_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_title_publisher"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_date_book" />
            <TextView
                android:id="@+id/tv_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_publisher"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_publisher" />

            <TextView
                android:id="@+id/tv_title_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_title_isbn"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_publisher" />

            <TextView
                android:id="@+id/tv_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_isbn"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_isbn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>